# DesksetBack

./: .gitignore  README.md  main-prod.py  main.py  pyproject.toml  requirement.txt  requirements.txt  setup.py
.github/workflows/: autobuild.yaml  publish.yml
api/: _读我.md
core/: custom_io.py  diary.py  setting.py
i18n/: _读我.md  en.yaml  zh-cn.yaml
log/: _读我.md
plugin/sample/: register.yaml
res/PyStand/: README.md
sample_plugin/: README.md  router.py
src/: deskset.py  main.py
src-ffi/DiskActiveTime/: build.bat  main.c
src-ffi/Everything/: main.c
src-ffi/ExtractIcon/: main.cpp  test.bat
src/api/: README.md  __init__.py
src/config/: README.md
src/deskset/: __init__.py  main.py
src/deskset/core/: README.md  __init__.py  config.py  format.py  locale.py  log.py  root_path.py  standard.py  text_file.py
src/deskset/feature/: __init__.py  activity.py  apscheduler.py  current.py  device.py  diary.py  greet.py  obsidian.py  profile.py  quick.py  script.py  timeplace.py  todo.py
src/deskset/feature/app/: __init__.py
src/deskset/feature/device/: __init__.py  abstract.py  factory.py  unknow.py  win32.py
src/deskset/feature/note/: README.md  (+5 more)
src/deskset/presenter/: format.py
src/deskset/router/: __init__.py  access.py  api.py  config.py  current.py  debug.py  device.py  diary.py  greet.py  obsidian.py  plugin.py  profile.py  quick.py  stand_response.py  weather.py
src/feature/diary/: __init__.py
src/i18n/: en.yaml  zh-cn.yaml
src/package_C/disk_active_time/: build.bat  main.c
src/package_C/everything/: build.bat
test/: req_diary.http
(+38 files in other folders)
