[project]
name = "desksetback"
version = "0.1.0"
description = "数字桌搭-后端"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "apscheduler==3.10.1",
    "arrow==1.3.0",
    "asyncer>=0.0.8",
    "dynaconf==3.2.6",
    "fastapi==0.115.4",
    "httpx==0.27.2",
    "icoextract==0.1.6",
    "orjson==3.10.7",
    "psutil==6.0.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "send2trash==1.8.3",
    "uvicorn==0.32.0",
]
